# PlatformerSFMLMarvinGAEL

./: CMakeLists.txt
include/: Background.h  Engine.h  Platform.h  Trap.h  WinObject.h  globals.h  player.h  spike.h  winningChest.h
src/: Background.cpp  Engine.cpp  Platform.cpp  Trap.cpp  WinObject.cpp  globals.cpp  main.cpp  player.cpp  spike.cpp  winningChest.cpp
